--- a/Search.html
+++ b/Search.html
@@ -15,6 +15,10 @@
             <input placeholder="search amazon.in">
             <button>Search</button>
     </div>
+    <div style="height: 700px;">
+
+    </div>
+    <footer style="color: black; text-align: center;">© 1996-2025, Amazon.com, Inc. or its affiliates</footer>
     
 </body>
 </html>
